err/pd.requires.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pd'...
Listing './lib/python3.5/site-packages/pd/find'...
Compiling './lib/python3.5/site-packages/pd/find/__init__.py'...
***   File "./lib/python3.5/site-packages/pd/find/__init__.py", line 34
    print "Lads, it's only module, don't use it as application..."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/find/file.py'...
***   File "./lib/python3.5/site-packages/pd/find/file.py", line 37
    print "Lads, it's only module, don't use it as application..."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/find/filewrapper.py'...
***   File "./lib/python3.5/site-packages/pd/find/filewrapper.py", line 90
    print "Lads, it's only module, don't use it as application..."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/find/find.py'...
***   File "./lib/python3.5/site-packages/pd/find/find.py", line 46
    print "Lads, it's only module, don't use it as application..."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/find/findmixin.py'...
***   File "./lib/python3.5/site-packages/pd/find/findmixin.py", line 80
    print "Lads, it's only module, don't use it as application..."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/find/posixmixin.py'...
***   File "./lib/python3.5/site-packages/pd/find/posixmixin.py", line 28
    print "Lads, it's only module, don't use it as application..."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pd/requires'...
Compiling './lib/python3.5/site-packages/pd/requires/find_provides.py'...
***   File "./lib/python3.5/site-packages/pd/requires/find_provides.py", line 34
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/requires/find_requires.py'...
***   File "./lib/python3.5/site-packages/pd/requires/find_requires.py", line 79
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/requires/imalyzer.py'...
***   File "./lib/python3.5/site-packages/pd/requires/imalyzer.py", line 40
    print   " ============= \n" \
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/requires/provides.py'...
***   File "./lib/python3.5/site-packages/pd/requires/provides.py", line 96
    print item
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/requires/requires.py'...
***   File "./lib/python3.5/site-packages/pd/requires/requires.py", line 62
    except SyntaxError,msg :
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pd.find-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pd.requires-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
